--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,7 @@ header nav ul li:last-of-type a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 62px;
 }
 
 /* star */
