--- a/css/media.css
+++ b/css/media.css
@@ -1,7 +1,210 @@
-@media only screen and (max-width: 874px){
+@media only screen and (max-width: 1152px) {
+  .what_we_do .cards {
+    display: flex;
+    justify-content: center;
+  }
+
+  .content__container {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 769px) {
+  header nav ul li a {
+    font-size: 11px;
+  }
+
+  header nav ul li {
+    margin-left: 8px;
+  }
+
+  .tools .container {
+    justify-content: center;
+  }
+
+  .tools .by_img {
+    position: relative;
+    width: 100%;
+    height: 400px;
+  }
+
+  .carousel {
+    flex-direction: column;
+  }
+
+  .carousel a {
+    padding-bottom: 20px;
+  }
+
+  footer .container {
+    display: block;
+    padding: 0 15px;
+  }
+
+  footer .righ_first ul {
+    min-width: inherit;
+  }
+
+  footer .container {
+    display: block;
+    padding: 0 15px;
+  }
+
+  footer .righ_first ul {
+    min-width: inherit;
+  }
+}
+
+@media only screen and (max-width: 429px) {
+  header nav {
+    display: none;
+  }
+
+  footer .righ_first ul {
+    min-width: inherit;
+  }
+
+  .tools .container article {
+    max-width: 361px;
+  }
+
+  footer .container:nth-child(2) {
+    margin: 24px;
+  }
+
+  footer .right_first {
+    display: block;
+  }
+
+  footer .right_first ul {
+    margin-bottom: 23px;
+    text-align: center;
+  }
+
+  footer .left_first {
+    text-align: center;
+  }
+
+  footer .left_first p {
+    padding-bottom: 20px;
+  }
+
+  .social_links ul {
+    justify-content: center;
+  }
+
+  footer .pages img {
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 415px) {
+  .main_banner article p {
+    margin: 0 15px;
+  }
+}
+
+@media only screen and (max-width: 413px) {
+}
+
+@media only screen and (max-width: 391px) {
+}
+
+@media only screen and (max-width: 376px) {
+  .what_we_do h4 {
+    font-size: 24px;
+  }
+
+  .tools .container {
+    min-height: 400px;
+    max-width: 320px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .sunset {
+    padding: 0;
+    justify-content: center;
+  }
+
+  .sunset article {
+    text-align: center;
+  }
+
+  .leafs {
+    padding: 0;
+    justify-content: center;
+  }
+
+  .leafs article {
+    text-align: center;
+  }
+
+  .star {
+    padding: 0;
+    justify-content: center;
+  }
+
+  .star article {
+    text-align: center;
+  }
+
+  footer {
+    padding: 50px;
+  }
+}
+
+@media only screen and (max-width: 321px) {
+  .main_banner .bottom_icons li {
+    font-size: 9px;
+  }
+
+  .sunset .bottom_icons li {
+    font-size: 9px;
+  }
+
+  .main_banner .bottom_icons li {
+    font-size: 9px;
+  }
+
+  .leafs .bottom_icons li {
+    font-size: 9px;
+  }
+
+  .star .bottom_icons li {
+    font-size: 9px;
+  }
+
+  .tools .container {
+    margin: 0 15px;
+  }
+
+  .contact {
+    padding: 120px 10px 108px;
+  }
+
+  footer .right_first ul {
+    min-width: 0;
+    margin-left: 0;
+  }
+}
+
+@media only screen and (max-width: 281px) {
+  .contact_container h2 {
+    font-size: 38px;
+  }
+
+  .bottom_icons {
+    right: 17px;
+  }
+}
+
+/* @media only screen and (max-width: 874px){
     header nav ul li{
         margin-left: 12px;
     }
+
 }
 @media only screen and (max-width: 794px){
     header nav ul li a{
@@ -27,4 +230,4 @@
     footer .righ_first ul{
         min-width: inherit;
     }
-}
+} */
